# CameraDeamon

./: .gitignore  5119d0de.html  5bae746e.html  87073916.html  AGDUtils.cpp  AGDUtils.h  AgriDataCamera.cpp  AgriDataCamera.h  AgriDataUSBCamera.cpp  AgriDataUSBCamera.h  CMakeLists.txt  CameraDeamon.workspace  CameraDeamonKeepAlive.sh  ImageReader.h  Makefile  Readme.md  a2c9fb3c.html  bc8b5117.html  c2d57ec0.html  cameradeamon.lockfile  cams.cpp  cudasift.cpp  dd.diff  df.csv  emulator2  emulator2.cpp  emulator2.py  emulator3  emulator3.cpp  f1699d6c.html  glob  hi  main.cpp  main.safe  mkdocs.yml  read_write_attributes.cpp  run  test  test.cpp  test.sh  (+3 more)
.codelite/: CameraDeamon.session  CameraDeamon.tags  CameraDeamon.workspace.agridata  compile_commands.json  cppcheck.list  refactoring.db
CameraDeamon/: CMakeCache.txt  CMakeLists.txt  CameraDeamon.mk  CameraDeamon.mk_2  CameraDeamon.project  CameraDeamon.txt  CameraDeamon.txt_2  Makefile  cmake_install.cmake
CameraDeamon/Debug/: CameraDeamon  acquire.cpp.o.d  cat  lib_easylogging++.cc.i  main.cpp.o.d  rfc3339.cpp.o.d
CameraDeamon/Release/: CMakeCache.txt
config/: acA1300-200uc.pfs  acA1920-155uc.pfs  acA1920-155uc_sort.pfs  acA1920-40gc.new  acA1920-40gc.pfs  acA1920-40gc.selwyn  acA1920-40gc_22794614.pfs  cameradeamon.service  compare.py  comparison.txt  config.txt  easylogging.conf  juneau.pfs  juneau2.pfs  prasad.pfs  read_config  read_config.cpp
config/save/: acA1920-155uc.pfs  acA1920-155uc_sort.pfs
docs/: basic.md  communication.md  deamonization.md  env.md  index.md  logging.md  multi.md  output.md
lib/: cudasift  easylogging++.cc  easylogging++.h  hdf5_wrapper.cpp  hdf5_wrapper.h  jtest  jtest.cpp  mongodb.cpp  surfmatcher.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
profiles/0/: short.txt
profiles/1/: focused.txt  profile.pprof
profiles/1/out.txt/: medium.txt
profiles/2/: focused.txt  profile.pprof
src/: Grab.cpp  create_read_write_datasets.cpp  ex_image1.cpp  testmongo  testmongo.cpp
tests/: CMakeLists.txt  emulator.cpp  emulator.py  ex_image1.cpp  hdf5read.cpp  mongodb.cpp  testmongo
utils/: 37ae7ec4.html  5119d0de.html  5c041421.html  9bb078cc.html  aca1300-6000-2.html  aca1300-6000.html  ad1a0bf9.html  c13c53df.html  comparison.html  comparison2.html  comparison5fps.html  comparison_alone.html  comparison_together.html  fps.html  refactored.html  timestamp.py
